[Media, Video] Update WMPI when the pipeline gets a new average keyframe distance.

BUG=688618
TEST=manually followed the repro steps from the bug

Review-Url: https://codereview.chromium.org/2688383006
Cr-Commit-Position: refs/heads/master@{#450186}

Former-commit-id: eecec52c10dffeebd35d273a8999388f98089b80