media/base/mock_filters.h
@@ -57,6 +57,7 @@ class MockPipelineClient : public Pipeline::Client {
   MOCK_METHOD0(OnWaitingForDecryptionKey, void());
   MOCK_METHOD1(OnVideoNaturalSizeChange, void(const gfx::Size&));
   MOCK_METHOD1(OnVideoOpacityChange, void(bool));
+  MOCK_METHOD0(OnVideoAverageKeyframeDistanceUpdate, void());
 };
 
 class MockPipeline : public Pipeline {
